--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/ws": "^8.2.2",
     "autoprefixer": "^9",
@@ -21,6 +24,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2",
     "ws": "^8.5.0"
   },
   "devDependencies": {
