Restructures and cleans up code, adds logging

--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@types/ws": "^8.2.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
+    "electron-log": "^4.4.6",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.6",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.0.23",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -38,7 +43,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "electron": "^17.1.0",
+    "electron": "^17.1.2",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
