--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.6",
+    "regedit": "^5.0.0",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.0.23",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2",
-    "windows": "^0.1.0",
     "ws": "^8.5.0"
   },
   "devDependencies": {
