--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "electron-vue-vite",
-  "version": "1.0.0",
-  "main": "dist/main/index.cjs",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "name": "valorant-chat-client",
+  "version": "0.1.6",
+  "description": "VALORANT Chat Client",
+  "author": {
+    "name": "Jonathan Loh",
+    "email": "jonathanloh02@gmail.com",
+    "url": "https://jloh02.github.io/"
+  },
   "license": "MIT",
+  "private": false,
+  "main": "dist/main/index.cjs",
   "scripts": {
     "dev": "node scripts/watch.mjs",
     "prebuild": "vue-tsc --noEmit --p packages/renderer/tsconfig.json && node scripts/build.mjs",
@@ -16,12 +22,9 @@
     "node": ">=14.17.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.21.1",
     "@vitejs/plugin-vue": "^2.3.2",
     "electron": "18.2.0",
     "electron-builder": "^23.0.3",
-    "nano-staged": "^0.8.0",
-    "simple-git-hooks": "^2.7.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.8",
     "vite-plugin-electron": "^0.4.3",
