--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "jsx": "preserve",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "sourceMap": true,
+    "noEmit": true,
+    "sourceMap": false,
     "baseUrl": "./",
     "strict": true,
     "paths": {},
