--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "node": ">=14.17.0"
   },
   "devDependencies": {
+    "@types/node": "^14.11.2",
+    "@types/ws": "^8.5.3",
     "@vitejs/plugin-vue": "^2.3.2",
     "autoprefixer": "^10.4.7",
     "electron": "18.2.0",
     "electron-builder": "^23.0.3",
     "sass": "^1.51.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.0.3",
     "vite": "^2.9.8",
     "vite-plugin-electron": "^0.4.3",
     "vite-plugin-resolve": "^2.0.8",
@@ -44,5 +46,13 @@
     "vite",
     "vue3",
     "vue"
-  ]
+  ],
+  "dependencies": {
+    "axios": "^0.27.2",
+    "electron-log": "^4.4.7",
+    "electron-updater": "^5.0.1",
+    "postcss": "^8.1.0",
+    "regedit": "^5.1.1",
+    "ws": "^8.6.0"
+  }
 }
