--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -12,8 +12,9 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
     "paths": {
+      "@assets/*": ["assets/*"],
       "@interfaces/*": ["packages/interfaces/*"]
     }
   },
-  "include":["*.ts"]
+  "include":["**/*.ts"]
 }
