Configure icon path for electron builder

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -10,7 +10,7 @@
   files: ["dist"],
   win: {
     target: ["nsis"],
-    icon: "build/icons/icon.png",
+    icon: "assets/icon.png",
   },
   nsis: {
     oneClick: false,
