Cleanup code and remove unnecessary assets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
     "baseUrl": "./",
     "strict": true,
     "paths": {
-      "@": ["packages/renderer/src/*"],
-      "@icons": ["packages/renderer/src/icons/*"],
-      "@interfaces": ["packages/interfaces/*"]
+      "@/*": ["packages/renderer/src/*"],
+      "@assets/*": ["assets/*"],
+      "@icons/*": ["packages/renderer/src/icons/*"],
+      "@interfaces/*": ["packages/interfaces/*"]
     },
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true
