--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -1,20 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "esnext",
-    "useDefineForClassFields": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
     "paths": {
-      "@assets/*": ["assets/*"],
+      
       "@interfaces/*": ["packages/interfaces/*"]
     }
   },
-  "include":["**/*.ts"]
+  "include":["*.ts"]
 }
