Delete AppData on uninstall

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -16,7 +16,7 @@
     perMachine: true,
     allowElevation: true,
     allowToChangeInstallationDirectory: true,
-    deleteAppDataOnUninstall: false,
+    deleteAppDataOnUninstall: true,
   },
   extraResources: [
     {
