--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,11 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build
+    - name: Installing dependencies
+      uses: borales/actions-yarn@v3.0.0
+      with:
+        cmd: install # will run `yarn install` command
+    - name: Building App
+      uses: borales/actions-yarn@v3.0.0
+      with:
+        cmd: build # will run `yarn build` command
