--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
@@ -25,11 +25,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Installing dependencies
-      uses: borales/actions-yarn@v3.0.0
-      with:
-        cmd: install # will run `yarn install` command
-    - name: Building App
-      uses: borales/actions-yarn@v3.0.0
-      with:
-        cmd: build # will run `yarn build` command
+        cache: 'yarn'
+    - run: corepack enable
+    - run: yarn install
+    - run: yarn build
