--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them and build the source code
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Windows Build
 
 on:
   workflow_dispatch:
@@ -10,6 +10,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env: 
+  GH_TOKEN: ${{ secrets.github_token }}
 jobs:
   build:
 
